manifests/miniflux/Ingress-miniflux.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: miniflux
  namespace: miniflux
spec:
  ingressClassName: traefik
  rules:
    - host: reader.cdbrdr.com
      http:
        paths:
          - backend:
              service:
                name: miniflux
                port:
                  name: http
            path: /
            pathType: Prefix
