manifests/miniflux/CiliumNetworkPolicy-allow-postgres-egress.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-postgres-egress
  namespace: miniflux
spec:
  egress:
    - toEntities:
        - kube-apiserver
      toPorts:
        - ports:
            - port: "5432"
              protocol: TCP
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: miniflux
