manifests/miniflux/CiliumNetworkPolicy-allow-rss-feeds-egress.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-rss-feeds-egress
  namespace: miniflux
spec:
  egress:
    - icmps:
        - fields:
            - family: IPv4
              type: Echo
      toEntities:
        - world
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: miniflux
